--- a/index.html
+++ b/index.html
@@ -7,24 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to Onpoint_Landing_Page</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="main.js"> -->
     <link rel="stylesheet" href="css/reset.css">
-
+    <script src="js/main.js"></script>
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap"
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
 
 </head>
 
