completed third phase of the project, made it completely responsive, the TEXT side

--- a/index.html
+++ b/index.html
@@ -34,7 +34,102 @@
         </div>
     </section>
 
-    <!-- Header //////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Header Ends//////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+    <!-- Get Started///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <section id="start">
+        <div class="container">
+            <div class="bg-color">
+                <div class="car-cover">
+                    <div class="top">
+
+                        <h3>Just drive </h3>
+                        <h3>We'll handle the rest</h3>
+                        <p>All-inclusive usage-based car subscriptions</p>
+                    </div>
+                    <!-- <div class="cover-text"> -->
+
+                    <!-- <p>All-inclusive usage-based car subscriptions.</p> -->
+
+                    <div class="bottom">
+                        <form class="phone-area">
+                            <input type="tel" name="tel" placeholder="Phone number">
+                            <button type="submit" name="button">Get Started</button>
+                        </form>
+                    </div>
+
+                    <!-- </div> -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Get Started Ends ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+
+
+
+    <!-- Text//////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <section id="text">
+        <div class="container">
+            <div class="details">
+                <div class="top-section">
+                    <div class="green-line">
+
+                    </div>
+                    <h3>Handy and Convenient process</h3>
+                    <p>Incredible All-inclusive usage-based car subscriptions
+                    </p>
+                    <p>Weekly and Monthly plans with
+                        insurance,
+                        parking,
+                        maintenance, road tax and much more you can imagine</p>
+                </div>
+                <div class="bottom-section">
+                    <div class="column text-box-a">
+                        <a href="#"> <i class="fas fa-sms fa-2x"></i></a>
+                        <h3>Just Text</h3>
+                        <p>With or without the app, just send a text for your car</p>
+                        <div class="grey-line">
+
+                        </div>
+                    </div>
+                    <div class="column text-box-b">
+                        <a href="#"> <i class="fas fa-car fa-2x"></i></a>
+                        <div class="dashed-line">
+
+                        </div>
+                        <h3>We'll deliver</h3>
+                        <p>Clean & tidy, your ordered car will arrive wherever you are </p>
+                        <div class="grey-line">
+
+                        </div>
+                    </div>
+                    <div class="column text-box-c">
+                        <a href="#"> <i class="fas fa-road fa-2x"></i></a>
+                        <div class="dashed-line">
+
+                        </div>
+                        <h3>Enjoy</h3>
+                        <p>Worry about nothing, just hop in and drive like you own it</p>
+                        <div class="grey-line">
+
+                        </div>
+                    </div>
+                    <div class="column text-box-d">
+                        <a href="#"> <i class="fas fa-map-marked-alt fa-2x"></i></a>
+                        <div class="dashed-line">
+
+                        </div>
+                        <h3>We'll pick it up</h3>
+                        <p>We'll come for it, or return at your own convenience </p>
+                        <div class="grey-line">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
