completed section d, made it responsive

--- a/index.html
+++ b/index.html
@@ -130,6 +130,78 @@
             </div>
         </div>
     </section>
+    <!-- Text Ends//////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+    <!-- Restriction Starts//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <section id="restrictions">
+        <div class="container">
+            <div class="info box-shadow-down">
+                <div class="column restrictions-box-a">
+                    <div class="side">
+                        <a href="#" class="icon icon-shadow-blue">
+                            <i class="fas fa-truck-loading"></i>
+                        </a>
+                    </div>
+                    <div class="inline">
+                        <h3>Ready to Camp?</h3>
+                        <p>Car trailer available</p>
+                    </div>
+
+                </div>
+                <div class="column restrictions-box-b">
+                    <div class="side">
+                        <a href="#" class="icon icon-shadow-green">
+                            <i class="fas fa-baby"></i>
+                        </a>
+                    </div>
+                    <div class="inline">
+                        <h3>Got a Baby?</h3>
+                        <p>Baby seat on board</p>
+                    </div>
+
+
+                </div>
+                <div class="column restrictions-box-c">
+                    <div class="side">
+                        <a href="#" class="icon icon-shadow-yellow">
+                            <i class="fas fa-dog"></i>
+                        </a>
+                    </div>
+                    <div class="inline">
+                        <h3>Own a pet?</h3>
+                        <p>Pet car seat included</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Restriction Ends//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+    <!-- Delivery Starts//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <section id="delivery">
+        <div class=container>
+            <div class="options">
+                <div class="column">
+                    <div class="green-line-2">
+
+                    </div>
+                    <h3>Two way system <br> of delivery</h3>
+                </div>
+                <div class="column">
+                    <a href="#" class="icon-2 icon-shadow-green"><i class="far fa-address-card"></i></a>
+                    <h5>Flexible Service</h5>
+                    <p>Your car will be delivered to your address according to your preferred time.</p>
+                </div>
+                <div class="column">
+                    <a href="#" class="icon-2 icon-shadow-yellow"><i class="fas fa-handshake"></i></a>
+                    <h5>Direct Service</h5>
+                    <p>You can pick up your car from any of our nearest offices. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Delivery Ends//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 </body>
 
 </html>
