completed section E, which is the boxes containing cars, not responsive yet

--- a/index.html
+++ b/index.html
@@ -202,6 +202,78 @@
         </div>
     </section>
     <!-- Delivery Ends//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+    <!-- Cars Start//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <section id="cars">
+        <div class="container">
+            <div class="contain">
+                <div class="left-side">
+                    <div class="bg-container">
+                        <box class="box-a car-shadow-up">
+                            <div class="value">
+                                <a href="#" class="cash">£410<span>/mo</span></a>
+                            </div>
+                            <a href="#" class="model">
+                                <img src="img/jaquar.png" alt="">
+                                <!-- <img src="https://c4d709dd302a2586107d-f8305d22c3db1fdd6f8607b49e47a10c.ssl.cf1.rackcdn.com/thumbnails/stock-images/12d2ba8c38764e6a42af817be617815d.png"
+                                            alt=""> -->
+                            </a>
+                            <a href="#" class="brand">2019 Jaquar XJ</a>
+                        </box>
+
+                        <box class="box-b car-shadow-up">
+                            <div class="value">
+                                <a href="#" class="cash">£399<span>/mo</span></a>
+                            </div>
+                            <a href="#" class="model">
+                                <img src="img/bmw.png" alt="">
+                                <!-- <img src="https://c4d709dd302a2586107d-f8305d22c3db1fdd6f8607b49e47a10c.ssl.cf1.rackcdn.com/thumbnails/stock-images/9fc3646a4c9c4cba504fe513dbf6220d.png"
+                                        alt=""> -->
+                            </a>
+                            <a href="#" class="brand">2019 BMW 3 Series</a>
+                        </box>
+
+                        <box class="box-c car-shadow-down">
+                            <div class="value">
+                                <a href="#" class="cash">£499<span>/mo</span></a>
+                            </div>
+                            <a href="#" class="model">
+                                <img src="img/range.png" alt="">
+                                <!-- <img src="https://www.avisprestige.com/pages/extranet/158/1504182085-Range-Rover-Velar-Large.png"
+                                    alt=""> -->
+                            </a>
+                            <a href="#" class="brand">2019 Range Rover velar</a>
+                        </box>
+
+                        <box class="box-d car-shadow-down">
+                            <div class="value">
+                                <a href="#" class="cash">£405<span>/mo</span></a>
+                            </div>
+                            <a href="#" class="model">
+                                <img src="img/benz.png" alt="">
+                                <!-- <img src="https://www.pngkey.com/png/full/664-6641595_2019-s560-coupe-2019-s-class-coupe-mercedes.png"
+                                    alt=""> -->
+                            </a>
+                            <a href="#" class="brand">2019 Mercedes Benz S560 S Class</a>
+                        </box>
+
+
+                    </div>
+                </div>
+
+                <div class="right-side">
+                    <h3> You can never go wrong with <span class="blue">On</span><span class="grey">Point</span>
+                    </h3>
+                    <p>Comfortably at your location, choose from various type of models and makes of vehicle. SUV,
+                        Saloon,
+                        Estate,
+                        Hatchback! We have it all. </p>
+                    <a href="#"> Choose your car</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Cars End//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 </body>
 
 </html>
