completed section E which is the car section, finally made it fully responsive

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         Saloon,
                         Estate,
                         Hatchback! We have it all. </p>
-                    <a href="#"> Choose your car</a>
+                    <a href="#"> Choose Your Car</a>
                 </div>
             </div>
         </div>
