started section F, happy-customer section

--- a/index.html
+++ b/index.html
@@ -266,6 +266,86 @@
         </div>
     </section>
     <!-- Cars End//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+    <!-- happy-customer Starts///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <section id="customer">
+        <div class="container">
+            <div class="subscriptions">
+                <div class="top-section">
+                    <div class="green-line-3">
+
+                    </div>
+                    <h3>Plans tailored just for you</h3>
+                    <p>With no deposit down, subscribe to a plan with or without full service. Full service comes with
+                        fuel,
+                        cleaning, <br> delivery, pickup, insurance, parking, road tax, maintenance, e.t.c. Without full
+                        service
+                        exclude,<br>
+                        parking, delivery, pick-up, cleaning. Click below to find more.</p>
+                </div>
+
+                <div class="plan-section">
+                    <div class="column">
+                        <div class="box box-shadow-down">
+                            <a href="#" class="choose">
+                                <h3>Flexible</h3>
+                            </a>
+                            <a href="#" class="pound">
+                                <h3>From <span class="price">£250</span> / month</h3>
+                            </a>
+                            <div class="grey-line-2">
+
+                            </div>
+                            <p>Some services excluded</p>
+                            <a href="#" class="start">Start with Flexible</a>
+                            <a href="" class="view"> View details <span class="icon"><i
+                                        class="fas fa-arrow-down"></i></span></a>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="box box-shadow-down">
+                            <a href="#" class="recommend">
+                                Recommend
+                            </a>
+                            <a href="#" class="choose">
+                                <h3>Personalise</h3>
+                            </a>
+                            <a href="#" class="pound">
+                                <h3>From <span class="price">£500</span> / month</h3>
+                            </a>
+                            <div class="grey-line-2">
+
+                            </div>
+                            <p>Make your own choice of services</p>
+                            <a href="" class="start">Start with Personalise</a>
+                            <a href="#" class="view"> View details <span class="icon"><i
+                                        class="fas fa-arrow-down"></i></span></a>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="box box-shadow-down">
+                            <a href="#" class="choose">
+                                <h3>All-Inclusive</h3>
+                            </a>
+                            <a href="#" class="pound">
+                                <h3>From <span class="price">£1,000</span> / month</h3>
+                            </a>
+                            <div class="grey-line-2">
+
+                            </div>
+                            <p>All-inclusive services</p>
+                            <a href="#" class="start">Start with All-Inclusive</a>
+                            <a href="#" class="view"> View details <span class="icon"><i
+                                        class="fas fa-arrow-down"></i></span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- happy-customer Ends///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 </body>
 
 </html>
