--- a/index.html
+++ b/index.html
@@ -346,6 +346,71 @@
         </div>
     </section>
     <!-- happy-customer Ends///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+    <!-- footer Starts////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <section id="footer">
+        <div class="container">
+            <div class="top">
+                <h3>Get your car in a heart beat</h3>
+                <div class="start-now">
+                    <a href="#">Start Now</a>
+                </div>
+                <div class="grey-line-3">
+
+                </div>
+            </div>
+
+            <div class="middle">
+                <div class="column">
+                    <h3>About</h3>
+                    <ul class="info">
+                        <li><a href="#">Policy</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Insurance</a></li>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>Products</h3>
+                    <ul class="info">
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Personal</a></li>
+                        <li><a href="#">Sign in</a></li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>Support</h3>
+                    <ul class="info">
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Fees</a></li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3><span class="blue">On</span><span class="grey">Point</span></h3>
+                    <ul class="info">
+                        <li><a href="#">55 Coding Street</a></li>
+                        <li><a href="#">London</a></li>
+                        <li><a href="#">EC1N 2BJ</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="down">
+                <div class="grey-line-4">
+
+                </div>
+                <ul class="social">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+                <a href="#" class="copyright">copyright &#9400; 2019 OnPoint.</a>
+            </div>
+        </div>
+    </section>
+    <!-- footer Ends////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 </body>
 
 </html>
