completed the entire project, all fully responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                         <h3>Just drive </h3>
                         <h3>We'll handle the rest</h3>
-                        <p>All-inclusive usage-based car subscriptions</p>
+                        <p>All-inclusive usage-based car subscriptions.</p>
                     </div>
                     <!-- <div class="cover-text"> -->
 
@@ -77,18 +77,18 @@
 
                     </div>
                     <h3>Handy and Convenient process</h3>
-                    <p>Incredible All-inclusive usage-based car subscriptions
+                    <p>Incredible All-inclusive usage-based car subscriptions.
                     </p>
                     <p>Weekly and Monthly plans with
                         insurance,
                         parking,
-                        maintenance, road tax and much more you can imagine</p>
+                        maintenance, road tax and much more you can imagine.</p>
                 </div>
                 <div class="bottom-section">
                     <div class="column text-box-a">
                         <a href="#"> <i class="fas fa-sms fa-2x"></i></a>
                         <h3>Just Text</h3>
-                        <p>With or without the app, just send a text for your car</p>
+                        <p>With or without the app, just send a text for your car.</p>
                         <div class="grey-line">
 
                         </div>
@@ -99,7 +99,7 @@
 
                         </div>
                         <h3>We'll deliver</h3>
-                        <p>Clean & tidy, your ordered car will arrive wherever you are </p>
+                        <p>Clean & tidy, your ordered car will arrive wherever you are. </p>
                         <div class="grey-line">
 
                         </div>
@@ -110,7 +110,7 @@
 
                         </div>
                         <h3>Enjoy</h3>
-                        <p>Worry about nothing, just hop in and drive like you own it</p>
+                        <p>Worry about nothing, just hop in and drive like you own it.</p>
                         <div class="grey-line">
 
                         </div>
@@ -121,7 +121,7 @@
 
                         </div>
                         <h3>We'll pick it up</h3>
-                        <p>We'll come for it, or return at your own convenience </p>
+                        <p>We'll come for it, or return at your own convenience. </p>
                         <div class="grey-line">
 
                         </div>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="inline">
                         <h3>Ready to Camp?</h3>
-                        <p>Car trailer available</p>
+                        <p>Car trailer available.</p>
                     </div>
 
                 </div>
@@ -156,7 +156,7 @@
                     </div>
                     <div class="inline">
                         <h3>Got a Baby?</h3>
-                        <p>Baby seat on board</p>
+                        <p>Baby seat on board.</p>
                     </div>
 
 
@@ -169,7 +169,7 @@
                     </div>
                     <div class="inline">
                         <h3>Own a pet?</h3>
-                        <p>Pet car seat included</p>
+                        <p>Pet car seat included.</p>
                     </div>
 
                 </div>
@@ -186,7 +186,7 @@
                     <div class="green-line-2">
 
                     </div>
-                    <h3>Two way system <br> of delivery</h3>
+                    <h3>Two Choice of delivery</h3>
                 </div>
                 <div class="column">
                     <a href="#" class="icon-2 icon-shadow-green"><i class="far fa-address-card"></i></a>
@@ -270,79 +270,69 @@
     <!-- happy-customer Starts///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <section id="customer">
         <div class="container">
-            <div class="subscriptions">
-                <div class="top-section">
-                    <div class="green-line-3">
+            <!-- <div class="subscriptions"> -->
+            <div class="top-section">
+                <div class="green-line-3">
 
-                    </div>
-                    <h3>Plans tailored just for you</h3>
-                    <p>With no deposit down, subscribe to a plan with or without full service. Full service comes with
-                        fuel,
-                        cleaning, <br> delivery, pickup, insurance, parking, road tax, maintenance, e.t.c. Without full
-                        service
-                        exclude,<br>
-                        parking, delivery, pick-up, cleaning. Click below to find more.</p>
                 </div>
-
-                <div class="plan-section">
-                    <div class="column">
-                        <div class="box box-shadow-down">
-                            <a href="#" class="choose">
-                                <h3>Flexible</h3>
-                            </a>
-                            <a href="#" class="pound">
-                                <h3>From <span class="price">£250</span> / month</h3>
-                            </a>
-                            <div class="grey-line-2">
-
-                            </div>
-                            <p>Some services excluded</p>
-                            <a href="#" class="start">Start with Flexible</a>
-                            <a href="" class="view"> View details <span class="icon"><i
-                                        class="fas fa-arrow-down"></i></span></a>
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="box box-shadow-down">
-                            <a href="#" class="recommend">
-                                Recommend
-                            </a>
-                            <a href="#" class="choose">
-                                <h3>Personalise</h3>
-                            </a>
-                            <a href="#" class="pound">
-                                <h3>From <span class="price">£500</span> / month</h3>
-                            </a>
-                            <div class="grey-line-2">
-
-                            </div>
-                            <p>Make your own choice of services</p>
-                            <a href="" class="start">Start with Personalise</a>
-                            <a href="#" class="view"> View details <span class="icon"><i
-                                        class="fas fa-arrow-down"></i></span></a>
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="box box-shadow-down">
-                            <a href="#" class="choose">
-                                <h3>All-Inclusive</h3>
-                            </a>
-                            <a href="#" class="pound">
-                                <h3>From <span class="price">£1,000</span> / month</h3>
-                            </a>
-                            <div class="grey-line-2">
-
-                            </div>
-                            <p>All-inclusive services</p>
-                            <a href="#" class="start">Start with All-Inclusive</a>
-                            <a href="#" class="view"> View details <span class="icon"><i
-                                        class="fas fa-arrow-down"></i></span></a>
-                        </div>
-                    </div>
-                </div>
+                <h3>Plans tailored just for you</h3>
+                <p>With no deposit down, subscribe to a plan of your preference. </p>
+                <p>All-inclusive Service with fuel, cleaning, delivery, pickup, insurance, parking, road tax,
+                    maintenance, e.t.c.</p>
+                <p>Flexible service exclude, parking, delivery, pick-up, cleaning. </p>
+                <p>Create your own service with Personalise.</p>
+                <p>Click below to find more.</p>
             </div>
+
+            <ul class="plan-section">
+                <li>
+                    <div class="box box-shadow-down">
+                        <h3>Flexible</h3>
+                        <p class="pound"> <span class="price"> £250 </span> /month </p>
+                        <div class="grey-line-2">
+
+                        </div>
+                        <p> Excluded service</p>
+                        <div class="click"> <a href="#">Start with Flexible</a></div>
+                        <a href="" class="view"> View details
+                            <span class="icon">
+                                <i class="fas fa-arrow-down"></i>
+                            </span>
+                        </a>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="box box-shadow-down">
+                        <h2><a href="">Recommend</a></h2>
+                        <h3>Personalise</h3>
+                        <p class="pound"> <span class="price"> £500 </span> / month </p>
+                        <div class="grey-line-2">
+
+                        </div>
+                        <p>Create your service</p>
+
+                        <div class="click"><a href="#">Start with Personalise</a></div>
+                        <a href="#" class="view"> View details <span class="icon"><i
+                                    class="fas fa-arrow-down"></i></span></a>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="box box-shadow-down">
+                        <h3>All-Inclusive</h3>
+                        <p class="pound"> <span class="price"> £1,000 </span> / month </p>
+                        <div class="grey-line-2">
+
+                        </div>
+                        <p>All-inclusive service</p>
+                        <div class="click"> <a href="#">Start with All-Inclusive</a></div>
+                        <a href="#" class="view"> View details <span class="icon"><i
+                                    class="fas fa-arrow-down"></i></span></a>
+                    </div>
+                </li>
+            </ul>
+            <!-- </div> -->
         </div>
     </section>
     <!-- happy-customer Ends///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
