FINAL PROJECT, deleted some unuseful comments, linked the menus to sections within  the site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome to Onpoint_Landing_Page</title>
+    <title>Welcome to Onpoint Rentals</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <script src="js/main.js"></script>
@@ -17,58 +17,47 @@
 </head>
 
 <body>
-    <!-- Header //////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Header Starts//////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <section id="header">
         <div class="container">
             <div class="topnav" id="myTopnav">
-                <a href="#onpoint" class="on-point"><span class="blue">On</span><span class="grey">Point</span></a>
-                <a href="#sign-up" class="joining">Sign Up</a>
-                <a href="#log-in">Log In</a>
-                <a href="#Pricing">Pricing</a>
-                <a href="#FAQs">FAQs</a>
-                <a href="#about">About</a>
+                <a href="#footer" class="on-point"><span class="blue">On</span><span class="grey">Point</span></a>
+                <a href="#footer" class="joining">Sign Up</a>
+                <a href="#footer">Log In</a>
+                <a href="#customer">Pricing</a>
+                <a href="#restrictions">FAQs</a>
+                <a href="#text">About</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
         </div>
     </section>
-
     <!-- Header Ends//////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
-    <!-- Get Started///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Get Started Starts///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <section id="start">
         <div class="container">
             <div class="bg-color">
                 <div class="car-cover">
                     <div class="top">
-
                         <h3>Just drive </h3>
                         <h3>We'll handle the rest</h3>
                         <p>All-inclusive usage-based car subscriptions.</p>
                     </div>
-                    <!-- <div class="cover-text"> -->
-
-                    <!-- <p>All-inclusive usage-based car subscriptions.</p> -->
-
                     <div class="bottom">
                         <form class="phone-area">
                             <input type="tel" name="tel" placeholder="Phone number">
                             <button type="submit" name="button">Get Started</button>
                         </form>
                     </div>
-
-                    <!-- </div> -->
                 </div>
             </div>
         </div>
     </section>
     <!-- Get Started Ends ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
-
-
-
-    <!-- Text//////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Text Starts//////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <section id="text">
         <div class="container">
             <div class="details">
@@ -77,12 +66,13 @@
 
                     </div>
                     <h3>Handy and Convenient process</h3>
-                    <p>Incredible All-inclusive usage-based car subscriptions.
+                    <p>
+                        Incredible All-inclusive usage-based car subscriptions.
                     </p>
-                    <p>Weekly and Monthly plans with
-                        insurance,
-                        parking,
-                        maintenance, road tax and much more you can imagine.</p>
+                    <p>
+                        Weekly and Monthly plans with insurance, parking, maintenance, road tax and much more you can
+                        imagine.
+                    </p>
                 </div>
                 <div class="bottom-section">
                     <div class="column text-box-a">
@@ -146,7 +136,6 @@
                         <h3>Ready to Camp?</h3>
                         <p>Car trailer available.</p>
                     </div>
-
                 </div>
                 <div class="column restrictions-box-b">
                     <div class="side">
@@ -158,8 +147,6 @@
                         <h3>Got a Baby?</h3>
                         <p>Baby seat on board.</p>
                     </div>
-
-
                 </div>
                 <div class="column restrictions-box-c">
                     <div class="side">
@@ -171,7 +158,6 @@
                         <h3>Own a pet?</h3>
                         <p>Pet car seat included.</p>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -209,7 +195,6 @@
             <div class="contain">
                 <div class="left-side">
                     <div class="bg-container">
-
                         <box class="box-a car-shadow-up">
                             <div class="value">
                                 <a href="#" class="cash">£410<span>/mo</span></a>
@@ -249,7 +234,6 @@
                                 <img src="img/benz.png" alt="">
                             </a>
                         </box>
-
                     </div>
                 </div>
 
@@ -267,10 +251,9 @@
     </section>
     <!-- Cars End//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
-    <!-- happy-customer Starts///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Happy-customer Starts///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <section id="customer">
         <div class="container">
-            <!-- <div class="subscriptions"> -->
             <div class="top-section">
                 <div class="green-line-3">
 
@@ -332,12 +315,11 @@
                     </div>
                 </li>
             </ul>
-            <!-- </div> -->
         </div>
     </section>
-    <!-- happy-customer Ends///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Happy-customer Ends///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
-    <!-- footer Starts////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Footer Starts////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <section id="footer">
         <div class="container">
             <div class="top">
@@ -361,6 +343,7 @@
                         <li><a href="#">Terms & Conditions</a></li>
                     </ul>
                 </div>
+
                 <div class="column">
                     <h3>Products</h3>
                     <ul class="info">
@@ -369,6 +352,7 @@
                         <li><a href="#">Sign in</a></li>
                     </ul>
                 </div>
+
                 <div class="column">
                     <h3>Support</h3>
                     <ul class="info">
@@ -377,6 +361,7 @@
                         <li><a href="#">Fees</a></li>
                     </ul>
                 </div>
+
                 <div class="column">
                     <h3><span class="blue">On</span><span class="grey">Point</span></h3>
                     <ul class="info">
@@ -400,7 +385,7 @@
             </div>
         </div>
     </section>
-    <!-- footer Ends////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Footer Ends////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 </body>
 
 </html>
